Prevented iframe overflow.

--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  height: 100vh;
+  height: calc(100vh - 16px);
+  margin: 8px;
   padding: 0;
 }
 
@@ -21,7 +22,7 @@ body {
 
 #edit-wrapper {
   display: flex;
-  height: 100%;
+  height: calc(100% - 100px);
 }
 
 #edit-wrapper > * {
